--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
         tools:context="com.vaiotech.attendaceapp.MainActivity">
 
        <LinearLayout
-           android:weightSum="3"
+           android:weightSum="4"
            android:layout_alignParentTop="true"
            android:id="@+id/mainLinearLayout"
            android:layout_width="fill_parent"
@@ -19,79 +19,110 @@
        >
 
            <LinearLayout
-               android:layout_margin="5dp"
-               android:layout_weight="1"
-               android:orientation="horizontal"
+               android:weightSum="3"
+               android:layout_margin="0dp"
+               android:layout_weight="0.8"
+               android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                >
+               <LinearLayout
+                   android:weightSum="3"
+                   android:layout_marginLeft="5dp"
+                   android:layout_marginRight="5dp"
+                   android:layout_weight="2"
+                   android:orientation="horizontal"
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   >
 
-                   <RadioGroup
-                       android:id="@+id/modeRadioGroup"
-                       android:layout_gravity="center"
-                       android:orientation="horizontal"
-                       android:layout_width="fill_parent"
-                       android:layout_height="wrap_content">
+                       <RadioGroup
+                           android:id="@+id/modeRadioGroup"
+                           android:layout_gravity="center"
+                           android:orientation="horizontal"
+                           android:layout_width="fill_parent"
+                           android:layout_height="wrap_content">
 
-                       <RadioButton
-                           android:id="@+id/singleModeRB"
-                           android:textSize="20sp"
-                           android:textColor="#000000"
-                           android:layout_weight="1"
-                           android:text="Single Mode"
-                           android:layout_width="0dp"
-                           android:layout_height="wrap_content"
-                           android:checked="true" />
+                           <RadioButton
+                               android:id="@+id/singleModeRB"
+                               android:textSize="20sp"
+                               android:textColor="#FFF5EC"
+                               android:layout_weight="1"
+                               android:text="Single Mode"
+                               android:layout_width="0dp"
+                               android:layout_height="wrap_content"
+                               android:checked="true" />
 
-                       <RadioButton
-                           android:id="@+id/batchModeRB"
-                           android:textSize="20sp"
-                           android:textColor="#000000"
-                           android:layout_weight="1"
-                           android:text="Batch Mode"
-                           android:layout_width="0dp"
-                           android:layout_height="wrap_content"
-                           android:checked="false" />
-
-                   </RadioGroup>
+                           <RadioButton
+                               android:id="@+id/batchModeRB"
+                               android:textSize="20sp"
+                               android:textColor="#FFF5EC"
+                               android:layout_weight="1"
+                               android:text="Batch Mode"
+                               android:layout_width="0dp"
+                               android:layout_height="wrap_content"
+                               android:checked="false" />
+                       </RadioGroup>
                </LinearLayout>
-
+               <LinearLayout
+                   android:layout_gravity="bottom"
+                   android:layout_marginLeft="5dp"
+                   android:layout_marginRight="5dp"
+                   android:orientation="horizontal"
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   >
+                   <View
+                       android:layout_above="@+id/getInfoBUTTON"
+                       android:layout_width="fill_parent"
+                       android:layout_height="1dp"
+                       android:id="@+id/secHLine"
+                       android:background="#080807"/>
+               </LinearLayout>
+           </LinearLayout>
+       <LinearLayout
+           android:layout_weight="3.2"
+           android:weightSum="2"
+           android:orientation="vertical"
+           android:layout_width="match_parent"
+           android:layout_height="0dp"
+           >
                <LinearLayout
                    android:weightSum="2"
-                   android:layout_margin="3dp"
+                   android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center_horizontal">
-                        <Button
-                            android:layout_margin="3dp"
-                            android:layout_weight="1"
-                            android:textSize="25sp"
-                            android:textColor="#FFF5EC"
-                            android:background="#1267E9"
-                            android:onClick="scanQRCode"
-                            android:id="@+id/button1"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:text="Start QR Scan"
-                            android:lines="@integer/viewfinder_border_width" />
+                                <Button
+                                    android:layout_margin="3dp"
+                                    android:layout_weight="1"
+                                    android:textSize="25sp"
+                                    android:textColor="#FFF5EC"
+                                    android:background="#75001A"
+                                    android:onClick="scanQRCode"
+                                    android:id="@+id/button1"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    android:text="Start QR Scan"
+                                    android:lines="@integer/viewfinder_border_width" />
 
-                       <Button
-                           android:layout_margin="3dp"
-                           android:layout_weight="1"
-                           android:textSize="25sp"
-                           android:textColor="#FFF5EC"
-                           android:background="#FFC000"
-                           android:onClick="scanCard"
-                           android:id="@+id/button2"
-                           android:layout_width="match_parent"
-                           android:layout_height="match_parent"
-                           android:text="Smart Card Scan"
-                           android:lines="@integer/viewfinder_border_length" />
+                               <Button
+                                   android:layout_margin="3dp"
+                                   android:layout_weight="1"
+                                   android:textSize="25sp"
+                                   android:textColor="#FFF5EC"
+                                   android:background="#75001A"
+                                   android:onClick="scanCard"
+                                   android:id="@+id/button2"
+                                   android:layout_width="match_parent"
+                                   android:layout_height="match_parent"
+                                   android:text="Start Card Scan"
+                                   android:lines="@integer/viewfinder_border_length" />
                     </LinearLayout>
                <LinearLayout
-                   android:layout_margin="3dp"
+                   android:layout_margin="1dp"
                    android:weightSum="2"
                    android:layout_weight="1"
                    android:orientation="horizontal"
@@ -103,7 +134,7 @@
                             android:layout_weight="1"
                             android:textSize="25sp"
                             android:textColor="#FFF5EC"
-                            android:background="#953735"
+                            android:background="#75001A"
                             android:onClick="scanVoice"
                             android:id="@+id/button3"
                             android:layout_width="match_parent"
@@ -115,8 +146,8 @@
                            android:layout_weight="1"
                            android:textSize="25sp"
                            android:textColor="#FFF5EC"
-                           android:background="#953735"
-                           android:onClick="scanVoice"
+                           android:background="#75001A"
+                           android:onClick="manualEntry"
                            android:id="@+id/button4"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
@@ -124,6 +155,7 @@
 
                     </LinearLayout>
                <!--android:background="#92D050" -->
+       </LinearLayout>
        </LinearLayout>
     </RelativeLayout>
 
