--- a/app/src/main/res/layout/activity_manual_entry.xml
+++ b/app/src/main/res/layout/activity_manual_entry.xml
@@ -6,7 +6,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:background="#953735"
+    android:background="#75001A"
     tools:context="com.vaiotech.attendaceapp.ManualEntryActivity">
 
     <TextView
@@ -206,13 +206,14 @@
         android:layout_below="@+id/seperateDateMMTV"
         />
 
-    <EditView
+    <EditText
         android:layout_marginTop="10dp"
         android:textSize="22sp"
         android:textColor="#ffffff"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:text=""
+        android:text="eqweqweqw"
+        android:background="#ffffff"
         android:id="@+id/idValueTV"
         android:layout_toRightOf="@+id/idLableTV"
         android:layout_below="@+id/seperateDateMMTV"
