--- a/app/src/main/res/layout/activity_scan_card_single.xml
+++ b/app/src/main/res/layout/activity_scan_card_single.xml
@@ -6,7 +6,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:background="#FFC000"
+    android:background="#75001A"
     tools:context="com.vaiotech.attendaceapp.ScanCardSingleActivity">
 
 
@@ -253,7 +253,7 @@
         android:text="Scanning..."
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="#080807"
+        android:textColor="#ffffff"
         android:textSize="20sp"
         android:layout_above="@+id/secHLine"
         android:layout_centerHorizontal="true"
@@ -290,7 +290,7 @@
         android:layout_margin="20dp"
         android:textSize="20sp"
         android:textColor="#ffffff"
-        android:background="#89AC3F"
+        android:background="#109C0C"
         android:width="100dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
