--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,7 +46,7 @@
                                style="@style/RadioButtonAppTheme"
                                android:id="@+id/singleModeRB"
                                android:textSize="20sp"
-                               android:textColor="#000000"
+                               android:textColor="#FFFFFF"
                                android:layout_weight="1"
                                android:text="Single Mode"
                                android:layout_width="0dp"
@@ -57,7 +57,7 @@
                                style="@style/RadioButtonAppTheme"
                                android:id="@+id/batchModeRB"
                                android:textSize="20sp"
-                               android:textColor="#000000"
+                               android:textColor="#FFFFFF"
                                android:layout_weight="1"
                                android:text="Batch Mode"
                                android:layout_width="0dp"
