--- a/app/src/main/res/layout/activity_about_ipresence.xml
+++ b/app/src/main/res/layout/activity_about_ipresence.xml
@@ -15,7 +15,7 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
-        android:src="@drawable/logo"
+        android:src="@drawable/logo_1"
         android:layout_centerInParent="true"
         />
 
